--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -84,3 +84,13 @@
 		.player2.highlight
 			background linear-gradient(270deg,hsla(0,0%,93%,.75) 0,hsla(0,0%,93%,0) 50%,hsla(0,0%,100%,0))
 			color #ff2882
+
+// records
+// leaderboards
+.tabs
+	.left
+	.right
+		display flex
+
+	.right
+		margin-left auto
