--- a/public/init.css
+++ b/public/init.css
@@ -1924,6 +1924,9 @@ body {
   opacity: 0.25;
   cursor: not-allowed;
 }
+.compare-results {
+  display: none;
+}
 .compare-results .set-head {
   font-size: 1.4rem;
   margin: 3rem 0 1rem 0;
