--- a/src/css/custom/layout.styl
+++ b/src/css/custom/layout.styl
@@ -216,3 +216,126 @@ body
 
 			&:hover
 				box-shadow none
+
+
+// Player Comparison
+.ts-input
+	border: none
+	background: #efefef;
+
+.ts-input, .ts-input.focus, .ts-input.dropdown-active
+	border-radius: 10px;
+	padding: 0.5rem 1rem;
+
+.ts-input.focus, .ts-input.dropdown-active
+	box-shadow: inset 0 0 1px 2px #e2e2e2
+	border none
+
+.ts-control.multi .ts-input > div
+	margin-right .5rem
+	background: $tertiary-color
+	color white
+	border-radius: 10px;
+	padding: .2em .7em;
+
+
+
+.ts-control.plugin-remove_button .item .remove
+	border-left-color transparent
+
+.player-comparison__select-wrapper
+	max-width: 50rem
+	margin: 0 auto
+
+.player-comparison__select .form-group
+	display flex
+
+	.ts-control
+		width: 80%
+		margin-right 1rem
+.player-comparison__group
+	&-header
+		border-bottom: 1px solid $table-row-color
+		margin-top 1rem
+
+
+	&-title
+		font-size: 1.1rem
+		margin: 0
+		padding: 1em 0;
+		position relative
+		cursor pointer
+
+		.icn
+			display: block
+			width 15px
+			height 15px
+			background-image url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='451.847' height='451.847'%3E%3Cpath style='fill:%23242424' d='M225.923 354.706c-8.098 0-16.195-3.092-22.369-9.263L9.27 151.157c-12.359-12.359-12.359-32.397 0-44.751 12.354-12.354 32.388-12.354 44.748 0l171.905 171.915 171.906-171.909c12.359-12.354 32.391-12.354 44.744 0 12.365 12.354 12.365 32.392 0 44.751L248.292 345.449c-6.177 6.172-14.274 9.257-22.369 9.257z'/%3E%3C/svg%3E")
+			background-size 15px
+			background-position center
+			background-repeat no-repeat
+			position: absolute;
+			right: .5rem;
+			top: 50%;
+			transform: translateY(-50%);
+			transition: transform .3s ease-in-out;
+	&.active
+		.player-comparison__stats
+			display: block
+		.player-comparison__group
+			&-header .icn
+				transform: translateY(-50%) rotateX(180deg)
+
+			&-title
+				border none
+
+.player-comparison__accordion ul
+		@extend .ul-reset
+
+.player-comparison__stats
+	display: none
+
+	.row
+		display: flex
+
+		& > div
+			padding .5rem
+			flex 1
+			border-bottom: 1px solid $table-row-color
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+		.label
+			border-left: 1px solid $table-row-color
+			border-right: 1px solid $table-row-color
+			color #76766f
+			font-weight: 700
+			justify-content: flex-start
+
+		.player-value
+			border-right: 1px solid $table-row-color
+			text-align: center
+
+	.highlight
+		background rgb(255 243 245)
+		color $tertiary-color
+		font-weight: 700
+
+	&.name-area
+		display: block
+		position: sticky
+		top: -1px;
+		padding: 1em;
+		padding-top: calc(1em + 1px);
+		background: white
+		border-bottom: 2px solid $tertiary-color
+		padding 1rem 0
+		z-index: 100
+
+		.label, .player-value
+			border none
+			font-weight: 700
+
+		&.isSticky
+			border-bottom-width 4px
