Update variables.styl - form field variables changed

--- a/src/css/custom/variables.styl
+++ b/src/css/custom/variables.styl
@@ -45,20 +45,20 @@ $button-delete-color = #E05B52
 $drop-scroll-thumb = #7b7b85
 $drop-scroll-track = white
 
-// not surrently used
 $form-element-padding-top-bottom = 0.8em
 $form-element-padding-left-right = 0.8em
-$field-border = #ccd4dd
+$field-border = #ccc
 $field-width = 100%
 $field-max-width = 295px
 $field-padding = $form-element-padding-top-bottom $form-element-padding-left-right
 $field-padding-large = 1em
-$field-radius = 7px
+$field-radius = 0px
 $field-margin-bottom = 1.7rem
-$field-bg = $primary-color
-$field-outline = #20A8D2
+$field-bg = white
+$field-outline = $tertiary-color
 $field-color = $body-color
 
+// not surrently used
 $error-color = #420e0e
 $error-bg = #EB5757
 $valid-color = #226222
