Update main.styl - included plugin multiselect css

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -4,6 +4,7 @@
 
 /* plugins */
 @import 'plugins/nouislider.min.styl'
+@import 'plugins/tom-select.bootstrap5.styl'
 
 /* custom variables */
 @import 'custom/variables.styl'
