--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -48,45 +48,9 @@
 			opacity .25
 			cursor not-allowed
 
-.compare-results
+// compare hide dropdown
+.ts-dropdown
 	display none
-
-	.set-head
-		font-size 1.4rem
-		margin 3rem 0 1rem 0
-		display block
-
-	.set
-		display block
-		border 1px solid #eee
-
-		.row
-			display block
-			font-size 0
-
-			&:not(:last-child)
-				border-bottom 1px solid #eee
-
-		.label
-		.player1
-		.player2
-			display inline-block
-			width 33.33%
-			font-size .9rem
-			padding 0.5rem
-			border-right 1px solid #eee
-
-		.player1
-		.player2
-			text-align center
-			font-weight bold
-
-		.player1.highlight
-			background linear-gradient(90deg,hsla(0,0%,93%,.75) 0,hsla(0,0%,93%,0) 50%,hsla(0,0%,100%,0))
-			color #ff2882
-		.player2.highlight
-			background linear-gradient(270deg,hsla(0,0%,93%,.75) 0,hsla(0,0%,93%,0) 50%,hsla(0,0%,100%,0))
-			color #ff2882
 
 // records
 // leaderboards
