--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -9,25 +9,25 @@ aside#sidebar
 				a(href="/records" class=(nav === 'records' ? 'active' : '')) Records
 
 			li
+				a(href="/compare" class=(nav === 'compare' ? 'active' : '')) Player Comparison
+
+			li
 				a(href="/stats/league-table" class=(nav === 'league-table' ? 'active' : '')) League Table
 
 			li
 				a(href="/stats/summary" class=(nav === 'summary' ? 'active' : '')) Summary
 
 			li
-				a(href="/stats/attacking" class=(nav === 'attacking' ? 'active' : '')) Attacking
+				a(href="/stats/defense" class=(nav === 'defense' ? 'active' : '')) Defense
 
 			li
-				a(href="/stats/defending" class=(nav === 'defending' ? 'active' : '')) Defending
+				a(href="/stats/offense" class=(nav === 'offense' ? 'active' : '')) Offense
 
 			li
 				a(href="/stats/pups" class=(nav === 'powerups' ? 'active' : '')) Powerups
 
 			li
 				a(href="/stats/miscellaneous" class=(nav === 'miscellaneous' ? 'active' : '')) Miscellaneous
-
-			li
-				a(href="/compare" class=(nav === 'compare' ? 'active' : '')) Player Comparison
 
 			//-li
 			//-	a(href="/log" class=(nav === 'log' ? 'active' : '')) Recent Games - Log
