--- a/public/init.css
+++ b/public/init.css
@@ -190,7 +190,8 @@ nav ul,
 nav li,
 form .optionset,
 form .optionset li,
-.drop-down_list ul {
+.drop-down_list ul,
+.player-comparison__accordion ul {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -574,6 +575,505 @@ select {
   top: auto;
   right: 28px;
 }
+.ts-control.plugin-drag_drop.multi > .ts-input > div.ui-sortable-placeholder {
+  visibility: visible !important;
+  background: #f2f2f2 !important;
+  background: rgba(0,0,0,0.06) !important;
+  border: 0 none !important;
+  -webkit-box-shadow: inset 0 0 12px 4px #fff;
+          box-shadow: inset 0 0 12px 4px #fff;
+}
+.ts-control.plugin-drag_drop .ui-sortable-placeholder::after {
+  content: '!';
+  visibility: hidden;
+}
+.ts-control.plugin-drag_drop .ui-sortable-helper {
+  -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+          box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+.plugin-checkbox_options .option input {
+  margin-right: 0.5rem;
+}
+.plugin-clear_button .items {
+  padding-right: calc(1em + (3 * 5px)) !important;
+}
+.plugin-clear_button .clear-button {
+  opacity: 0;
+  position: absolute;
+  top: 0.375rem;
+  right: calc(0.75rem - 5px);
+  margin-right: 0 !important;
+  background: transparent !important;
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+.plugin-clear_button .has-items.focus .clear-button,
+.plugin-clear_button:hover .has-items .clear-button {
+  opacity: 1;
+}
+.ts-control .dropdown-header {
+  position: relative;
+  padding: 6px 0.75rem;
+  border-bottom: 1px solid #d0d0d0;
+  background: #f8f8f8;
+  border-radius: 0.25rem 0.25rem 0 0;
+}
+.ts-control .dropdown-header-close {
+  position: absolute;
+  right: 0.75rem;
+  top: 50%;
+  color: #343a40;
+  opacity: 0.4;
+  margin-top: -12px;
+  line-height: 20px;
+  font-size: 20px !important;
+}
+.ts-control .dropdown-header-close:hover {
+  color: #000;
+}
+.plugin-dropdown_input .ts-input.focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border: 1px solid #ced4da;
+}
+.plugin-dropdown_input .dropdown-input {
+  border: 1px solid #d0d0d0;
+  border-width: 0 0 1px 0;
+  display: block;
+  padding: 0.375rem 0.75rem;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  width: 100%;
+  background: transparent;
+}
+.plugin-dropdown_input .focus ~ .ts-dropdown .dropdown-input {
+  border-color: #86b7fe;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
+          box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
+}
+.ts-control.plugin-input_autogrow .ts-input.has-items > input {
+  min-width: 0;
+}
+.ts-control.plugin-input_autogrow .ts-input.focus.has-items > input {
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+}
+.ts-dropdown.plugin-optgroup_columns .ts-dropdown-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.ts-dropdown.plugin-optgroup_columns .optgroup {
+  border-right: 1px solid #f2f2f2;
+  border-top: 0 none;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-preferred-size: 0;
+      flex-basis: 0;
+  min-width: 0;
+}
+.ts-dropdown.plugin-optgroup_columns .optgroup:last-child {
+  border-right: 0 none;
+}
+.ts-dropdown.plugin-optgroup_columns .optgroup:before {
+  display: none;
+}
+.ts-dropdown.plugin-optgroup_columns .optgroup-header {
+  border-top: 0 none;
+}
+.ts-control.plugin-remove_button .item {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-right: 0 !important;
+}
+.ts-control.plugin-remove_button .item .remove {
+  color: inherit;
+  text-decoration: none;
+  vertical-align: middle;
+  display: inline-block;
+  padding: 1px 5px;
+  border-left: 1px solid #dee2e6;
+  border-radius: 0 2px 2px 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-left: 5px;
+}
+.ts-control.plugin-remove_button .item .remove:hover {
+  background: rgba(0,0,0,0.05);
+}
+.ts-control.plugin-remove_button .item.active .remove {
+  border-left-color: rgba(0,0,0,0);
+}
+.ts-control.plugin-remove_button .disabled .item .remove:hover {
+  background: none;
+}
+.ts-control.plugin-remove_button .disabled .item .remove {
+  border-left-color: #fff;
+}
+.ts-control.plugin-remove_button .remove-single {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-size: 23px;
+}
+.ts-control {
+  position: relative;
+}
+.ts-dropdown,
+.ts-input,
+.ts-input input {
+  color: #343a40;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: 1.5;
+  font-smoothing: inherit;
+}
+.ts-input,
+.ts-control.single .ts-input.input-active {
+  background: #fff;
+  cursor: text;
+}
+.ts-input {
+  border: 1px solid #ced4da;
+  padding: 0.375rem 0.75rem;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 0.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.ts-control.multi .ts-input.has-items {
+  padding: calc(0.375rem - 1px - 0px) 0.75rem calc(0.375rem - 1px - 3px - 0px);
+}
+.ts-input.disabled,
+.ts-input.disabled * {
+  cursor: default !important;
+}
+.ts-input.focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.ts-input > * {
+  vertical-align: baseline;
+  display: inline-block;
+}
+.ts-control.multi .ts-input > div {
+  cursor: pointer;
+  margin: 0 3px 3px 0;
+  padding: 1px 5px;
+  background: #efefef;
+  color: #343a40;
+  border: 0px solid #dee2e6;
+}
+.ts-control.multi .ts-input.disabled > div,
+.ts-control.multi .ts-input.disabled > div.active {
+  color: #868787;
+  background: #fff;
+  border: 0px solid #fff;
+}
+.ts-input > input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  min-width: 7rem;
+  display: inline-block !important;
+  padding: 0 !important;
+  min-height: 0 !important;
+  max-height: none !important;
+  max-width: 100% !important;
+  margin: 0 !important;
+  text-indent: 0 !important;
+  border: 0 none !important;
+  background: none !important;
+  line-height: inherit !important;
+  -webkit-user-select: auto !important;
+  -moz-user-select: auto !important;
+  -ms-user-select: auto !important;
+  user-select: auto !important;
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+.ts-input > input::-ms-clear {
+  display: none;
+}
+.ts-input > input:focus {
+  outline: none !important;
+}
+.ts-input.has-items > input {
+  margin: 0 4px !important;
+}
+.ts-input::after {
+  content: ' ';
+  display: block;
+  clear: left;
+}
+.ts-input.dropdown-active::before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  background: #fff;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.ts-input.rtl {
+  text-align: right;
+}
+.ts-input.rtl.single .ts-input:after {
+  left: calc(0.75rem + 5px);
+  right: auto;
+}
+.ts-input.rtl .ts-input > input {
+  margin: 0 4px 0 -2px !important;
+}
+.ts-input .ts-input.disabled {
+  opacity: 0.5;
+  background-color: #fff;
+}
+.input-hidden .ts-input > input {
+  opacity: 0;
+}
+.ts-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  border: 1px solid #d0d0d0;
+  background: #fff;
+  margin: 0.25rem 0 0 0;
+  border-top: 0 none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+          box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  border-radius: 0 0 0.25rem 0.25rem;
+}
+.ts-dropdown [data-selectable] {
+  cursor: pointer;
+  overflow: hidden;
+}
+.ts-dropdown [data-selectable] .highlight {
+  background: rgba(255,237,40,0.4);
+  border-radius: 1px;
+}
+.ts-dropdown .option,
+.ts-dropdown .optgroup-header,
+.ts-dropdown .no-results,
+.ts-dropdown .create {
+  padding: 3px 0.75rem;
+}
+.ts-dropdown .option,
+.ts-dropdown [data-disabled],
+.ts-dropdown [data-disabled] [data-selectable].option {
+  cursor: inherit;
+  opacity: 0.5;
+}
+.ts-dropdown [data-selectable].option {
+  opacity: 1;
+  cursor: pointer;
+}
+.ts-dropdown .optgroup:first-child .optgroup-header {
+  border-top: 0 none;
+}
+.ts-dropdown .optgroup-header {
+  color: #6c757d;
+  background: #fff;
+  cursor: default;
+}
+.ts-dropdown .create:hover,
+.ts-dropdown .option:hover,
+.ts-dropdown .active {
+  background-color: #e9ecef;
+  color: #1e2125;
+}
+.ts-dropdown .create:hover.create,
+.ts-dropdown .option:hover.create,
+.ts-dropdown .active.create {
+  color: #1e2125;
+}
+.ts-dropdown .create {
+  color: rgba(52,58,64,0.5);
+}
+.ts-dropdown .spinner {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin: 3px 0.75rem;
+}
+.ts-dropdown .spinner:after {
+  content: " ";
+  display: block;
+  width: 24px;
+  height: 24px;
+  margin: 3px;
+  border-radius: 50%;
+  border: 5px solid #d0d0d0;
+  border-color: #d0d0d0 transparent #d0d0d0 transparent;
+  -webkit-animation: lds-dual-ring 1.2s linear infinite;
+          animation: lds-dual-ring 1.2s linear infinite;
+}
+.ts-dropdown-content {
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 200px;
+  overflow-scrolling: touch;
+}
+.ts-dropdown,
+.ts-dropdown.form-control,
+.ts-dropdown.form-select {
+  height: auto;
+  padding: 0;
+  z-index: 1000;
+  background: #fff;
+  border: 1px solid rgba(0,0,0,0.15);
+  border-radius: 0.25rem;
+  -webkit-box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+          box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+}
+.ts-dropdown .optgroup-header {
+  font-size: 0.875rem;
+  line-height: 1.5;
+}
+.ts-dropdown .optgroup:first-child:before {
+  display: none;
+}
+.ts-dropdown .optgroup:before {
+  content: ' ';
+  display: block;
+  height: 0;
+  margin: 0.5rem 0;
+  overflow: hidden;
+  border-top: 1px solid rgba(0,0,0,0.15);
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
+}
+.ts-dropdown .create {
+  padding-left: 0.75rem;
+}
+.ts-dropdown-content {
+  padding: 5px 0;
+}
+.ts-input {
+  min-height: calc(1.5em + 0.75rem + 2px);
+  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+@media (prefers-reduced-motion: reduce) {
+  .ts-input {
+    -webkit-transition: none;
+    transition: none;
+  }
+}
+.ts-input.dropdown-active {
+  border-radius: 0.25rem;
+}
+.ts-input.dropdown-active::before {
+  display: none;
+}
+.ts-input.focus {
+  border-color: #86b7fe;
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
+          box-shadow: 0 0 0 0.25rem rgba(13,110,253,0.25);
+}
+.is-invalid .ts-input,
+.was-validated .ts-input.invalid {
+  border-color: #dc3545;
+}
+.is-invalid .ts-input.focus,
+.was-validated .ts-input.invalid.focus {
+  border-color: #bd2130;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(220,53,69,0.25);
+          box-shadow: 0 0 0 0.25rem rgba(220,53,69,0.25);
+}
+.is-valid .ts-input {
+  border-color: #198754;
+}
+.is-valid .ts-input.focus {
+  border-color: #198754;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(25,135,84,0.25);
+          box-shadow: 0 0 0 0.25rem rgba(25,135,84,0.25);
+}
+.ts-control.form-select-sm .ts-input.has-items,
+.ts-control.form-control-sm .ts-input.has-items {
+  min-height: calc(1.5em + 0.5rem + 2px) !important;
+  height: calc(1.5em + 0.5rem + 2px) !important;
+  padding: 0.25rem 0.5rem !important;
+  font-size: 0.875rem;
+}
+.ts-control.multi .ts-input.has-items {
+  padding-left: calc(0.75rem - 5px);
+  padding-right: calc(0.75rem - 5px);
+}
+.ts-control.multi .ts-input > div {
+  border-radius: calc(0.25rem - 1px);
+}
+.ts-control:not(.form-select) {
+  padding: 0;
+  border: none;
+  height: auto;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background: none;
+}
+.ts-control:not(.form-select).single .ts-input {
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e") no-repeat right 0.75rem center/16px 12px;
+}
+.ts-control.form-select {
+  padding: 0;
+  height: auto;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.ts-control.form-select .ts-input,
+.ts-control.form-select.single .ts-input.input-active {
+  border: none !important;
+  background: transparent !important;
+}
+.input-group .ts-input {
+  overflow: unset;
+  border-radius: 0 0.25rem 0.25rem 0;
+}
+@-webkit-keyframes lds-dual-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes lds-dual-ring {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
 /* custom variables */
 label {
   font-weight: 600;
@@ -667,9 +1167,10 @@ select {
   width: 100%;
   font-family: 'Nunito', sans-serif;
   border: none;
-  background-color: #37003c;
+  border-bottom: 1px solid #ccc;
+  background-color: #fff;
   color: #242424;
-  border-radius: 7px;
+  border-radius: 0px;
   padding: 0.8em 0.8em;
   max-width: 295px;
 }
@@ -681,10 +1182,8 @@ input[type='email']:focus,
 textarea:focus,
 .dropdown:focus,
 select:focus {
-  -webkit-box-shadow: inset 0 0 1px 2px #20a8d2;
-          box-shadow: inset 0 0 1px 2px #20a8d2;
+  border-bottom-color: #ff2882;
   outline: 0;
-  color: #fff;
 }
 input[type='text'].error,
 input[type='number'].error,
@@ -1896,6 +2395,145 @@ body {
   -webkit-box-shadow: none;
           box-shadow: none;
 }
+.ts-input {
+  border: none;
+  background: #efefef;
+}
+.ts-input,
+.ts-input.focus,
+.ts-input.dropdown-active {
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+}
+.ts-input.focus,
+.ts-input.dropdown-active {
+  -webkit-box-shadow: inset 0 0 1px 2px #e2e2e2;
+          box-shadow: inset 0 0 1px 2px #e2e2e2;
+  border: none;
+}
+.ts-control.multi .ts-input > div {
+  margin-right: 0.5rem;
+  background: #ff2882;
+  color: #fff;
+  border-radius: 10px;
+  padding: 0.2em 0.7em;
+}
+.ts-control.plugin-remove_button .item .remove {
+  border-left-color: transparent;
+}
+.player-comparison__select-wrapper {
+  max-width: 50rem;
+  margin: 0 auto;
+}
+.player-comparison__select .form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.player-comparison__select .form-group .ts-control {
+  width: 80%;
+  margin-right: 1rem;
+}
+.player-comparison__group-header {
+  border-bottom: 1px solid #e8e8e8;
+  margin-top: 1rem;
+}
+.player-comparison__group-title {
+  font-size: 1.1rem;
+  margin: 0;
+  padding: 1em 0;
+  position: relative;
+  cursor: pointer;
+}
+.player-comparison__group-title .icn {
+  display: block;
+  width: 15px;
+  height: 15px;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='451.847' height='451.847'%3E%3Cpath style='fill:%23242424' d='M225.923 354.706c-8.098 0-16.195-3.092-22.369-9.263L9.27 151.157c-12.359-12.359-12.359-32.397 0-44.751 12.354-12.354 32.388-12.354 44.748 0l171.905 171.915 171.906-171.909c12.359-12.354 32.391-12.354 44.744 0 12.365 12.354 12.365 32.392 0 44.751L248.292 345.449c-6.177 6.172-14.274 9.257-22.369 9.257z'/%3E%3C/svg%3E");
+  background-size: 15px;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 0.5rem;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+.player-comparison__group.active .player-comparison__stats {
+  display: block;
+}
+.player-comparison__group.active .player-comparison__group-header .icn {
+  -webkit-transform: translateY(-50%) rotateX(180deg);
+          transform: translateY(-50%) rotateX(180deg);
+}
+.player-comparison__group.active .player-comparison__group-title {
+  border: none;
+}
+.player-comparison__stats {
+  display: none;
+}
+.player-comparison__stats .row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.player-comparison__stats .row > div {
+  padding: 0.5rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border-bottom: 1px solid #e8e8e8;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.player-comparison__stats .row .label {
+  border-left: 1px solid #e8e8e8;
+  border-right: 1px solid #e8e8e8;
+  color: #76766f;
+  font-weight: 700;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+.player-comparison__stats .row .player-value {
+  border-right: 1px solid #e8e8e8;
+  text-align: center;
+}
+.player-comparison__stats .highlight {
+  background: #fff3f5;
+  color: #ff2882;
+  font-weight: 700;
+}
+.player-comparison__stats.name-area {
+  display: block;
+  position: sticky;
+  top: -1px;
+  padding: 1em;
+  padding-top: calc(1em + 1px);
+  background: #fff;
+  border-bottom: 2px solid #ff2882;
+  padding: 1rem 0;
+  z-index: 100;
+}
+.player-comparison__stats.name-area .label,
+.player-comparison__stats.name-area .player-value {
+  border: none;
+  font-weight: 700;
+}
+.player-comparison__stats.name-area.isSticky {
+  border-bottom-width: 4px;
+}
 /******************/
 .page-select .drop-down_list,
 .page-filter .drop-down_list {
@@ -1924,48 +2562,8 @@ body {
   opacity: 0.25;
   cursor: not-allowed;
 }
-.compare-results {
+.ts-dropdown {
   display: none;
-}
-.compare-results .set-head {
-  font-size: 1.4rem;
-  margin: 3rem 0 1rem 0;
-  display: block;
-}
-.compare-results .set {
-  display: block;
-  border: 1px solid #eee;
-}
-.compare-results .set .row {
-  display: block;
-  font-size: 0;
-}
-.compare-results .set .row:not(:last-child) {
-  border-bottom: 1px solid #eee;
-}
-.compare-results .set .label,
-.compare-results .set .player1,
-.compare-results .set .player2 {
-  display: inline-block;
-  width: 33.33%;
-  font-size: 0.9rem;
-  padding: 0.5rem;
-  border-right: 1px solid #eee;
-}
-.compare-results .set .player1,
-.compare-results .set .player2 {
-  text-align: center;
-  font-weight: bold;
-}
-.compare-results .set .player1.highlight {
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(237,237,237,0.75)), color-stop(50%, rgba(237,237,237,0)), to(rgba(255,255,255,0)));
-  background: linear-gradient(90deg, rgba(237,237,237,0.75) 0, rgba(237,237,237,0) 50%, rgba(255,255,255,0));
-  color: #ff2882;
-}
-.compare-results .set .player2.highlight {
-  background: -webkit-gradient(linear, right top, left top, color-stop(0, rgba(237,237,237,0.75)), color-stop(50%, rgba(237,237,237,0)), to(rgba(255,255,255,0)));
-  background: linear-gradient(270deg, rgba(237,237,237,0.75) 0, rgba(237,237,237,0) 50%, rgba(255,255,255,0));
-  color: #ff2882;
 }
 .tabs .left,
 .tabs .right {
