--- a/src/css/custom/layout.styl
+++ b/src/css/custom/layout.styl
@@ -244,7 +244,7 @@ body
 	border-left-color transparent
 
 .player-comparison__select-wrapper
-	max-width: 50rem
+	// max-width: 50rem
 	margin: 0 auto
 
 .player-comparison__select .form-group
@@ -312,6 +312,7 @@ body
 			color #76766f
 			font-weight: 700
 			justify-content: flex-start
+			min-width 310px
 
 		.player-value
 			border-right: 1px solid $table-row-color
