--- a/views/compare.pug
+++ b/views/compare.pug
@@ -50,7 +50,7 @@ block content
 								.label Overtime Win Rate
 
 					// attacking
-					li.player-comparison__group.active
+					li.player-comparison__group
 						.player-comparison__group-header
 							h3.player-comparison__group-title Attacking
 								span.icn
@@ -82,7 +82,7 @@ block content
 								.label Flaccids
 
 					// general
-					li.player-comparison__group.active
+					li.player-comparison__group
 						.player-comparison__group-header
 							h3.player-comparison__group-title Attacking
 								span.icn
