--- a/src/css/custom/layout.styl
+++ b/src/css/custom/layout.styl
@@ -313,6 +313,11 @@ body
 			font-weight: 700
 			justify-content: flex-start
 			min-width 310px
+			max-width 310px
+
+			&.sub
+				font-weight normal
+				padding-left 20px
 
 		.player-value
 			border-right: 1px solid $table-row-color
