--- a/views/compare.pug
+++ b/views/compare.pug
@@ -52,7 +52,8 @@ block content
 						.player-comparison__stats
 							.row.caps
 								.label Caps
-
+							.row.capfromteamprevent
+								.label.sub Whilst team prevent
 							.row.hold
 								.label Hold
 							.row.holdwhilstopponentsdont
@@ -63,9 +64,6 @@ block content
 								.label Long Holds
 							.row.longholdcaprate
 								.label.sub Leads to a cap
-
-
-
 							.row.grabs
 								.label Grabs
 							.row.grabswhilstopponentsprevent
@@ -74,24 +72,24 @@ block content
 								.label.sub Whilst opponents hold
 							.row.grabswhilstopponentsholdlong
 								.label.sub Whilst opponents long hold
-
 							.row.drops
 								.label Drops
-
+							.row.flaccids
+								.label.sub Flaccids
 							.row.dropwithin2tilesfrommybase
 								.label.sub Within 2 tiles from capping
 							.row.dropwithin5tilesfrommybase
 								.label.sub Within 5 tiles from capping
-
+							.row.dropwithinmyhalf
+								.label.sub Within My Half
 							.row.handoffs
 								.label Handoffs
 							.row.handoffpickups
 								.label.sub Pickups
 							.row.handoffdrops
 								.label.sub Drops
-
-							.row.flaccids
-								.label Flaccids
+							.row.pops
+								.label Pops
 
 
 					// Defense
@@ -103,24 +101,32 @@ block content
 						.player-comparison__stats
 							.row.flaginbase
 								.label Flag In Base
+							.row.concedes
+								.label Concedes
 							.row.prevent
 								.label Prevent
+							.row.capfrommyprevent
+								.label.sub Team Caps
 							.row.preventwhilstteamhold
 								.label.sub Whilst team hold
+							.row.opponentsgrabwhilstmyprevent
+								.label.sub Opponent Grabs
 							.row.returns
 								.label Returns
 							.row.quickreturns
 								.label.sub Quick
 							.row.keyreturns
 								.label.sub Key
-							.row.tags
-								.label Tags
+							.row.returnwithinmyhalf
+								.label.sub Within My Half
 							.row.resets
 								.label Resets
 							.row.resetfrommyreturn
 								.label.sub From my return
 							.row.returnfrommyprevent
 								.label.sub From my prevent
+							.row.tags
+								.label Tags
 
 
 					// Offense-Defense
