--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -29,5 +29,7 @@ aside#sidebar
 			li
 				a(href="/stats/miscellaneous" class=(nav === 'miscellaneous' ? 'active' : '')) Miscellaneous
 
-			//-li
-			//-	a(href="/log" class=(nav === 'log' ? 'active' : '')) Recent Games - Log
+	.tidbits
+		a(href="/log") Log
+		span Built by
+		a(href="https://tagpro.koalabeast.com/profile/5c534eebd2f5e06f400fedf1") nom
