--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -61,3 +61,30 @@
 
 	.right
 		margin-left auto
+
+
+.log
+	a
+		color #ff2882
+		box-shadow inset 0 -2px 0 0 rgba(#ff2882, .2)
+
+	tr:hover a:hover
+		box-shadow none
+
+.tidbits
+	position fixed
+	bottom 1rem
+	left 1rem
+	font-size .9rem
+
+	span
+		color white
+		padding-right .3rem
+
+	a
+		color white
+		box-shadow inset 0 -2px 0 0 rgba(white, .2)
+		margin-right 1rem
+
+		&:hover
+			box-shadow none
