--- a/views/layouts/_layout.pug
+++ b/views/layouts/_layout.pug
@@ -3,9 +3,10 @@ html
   head
     block title
     meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=yes")
     script(src='/init.js' async)
     link(rel='stylesheet' href='/init.css')
-    link(rel='icon', href='/favicon.svg')
+    link(rel='icon' href='/favicon.svg')
   body
     div#page-wrapper
       include ../includes/_header.pug
