--- a/views/includes/_foot.pug
+++ b/views/includes/_foot.pug
@@ -3,4 +3,4 @@
 //- | 	//]]></script>
 
 
-|<script async defer data-domain="tagpro.dev" src="https://plausible.io/js/plausible.js"></script>
+// |<script async defer data-domain="tagpro.dev" src="https://plausible.io/js/plausible.js"></script>
