--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -12,6 +12,9 @@ aside#sidebar
 				a(href="/compare" class=(nav === 'compare' ? 'active' : '')) Player Comparison
 
 			li
+				a(href="/rolling" class=(nav === 'rolling' ? 'active' : '')) Rolling Hundred Fifty
+
+			li
 				a(href="/stats/league-table" class=(nav === 'league-table' ? 'active' : '')) League Table
 
 			li
@@ -28,6 +31,9 @@ aside#sidebar
 
 			li
 				a(href="/stats/miscellaneous" class=(nav === 'miscellaneous' ? 'active' : '')) Miscellaneous
+
+			li
+				a(href="/maps" class=(nav === 'maps' ? 'active' : '')) Map Statistics
 
 	.tidbits
 		a(href="/log") Log
