--- a/views/leaderboards.pug
+++ b/views/leaderboards.pug
@@ -10,6 +10,7 @@ block content
 
 		.tabs
 			a(href="/" class=(season === false ? 'active' : '')) All-Time
+			a(href="/?season=3" class=(season === '3' ? 'active' : '')) Season 3
 			a(href="/?season=2" class=(season === '2' ? 'active' : '')) Season 2
 			a(href="/?season=1" class=(season === '1' ? 'active' : '')) Season 1
 
