--- a/views/includes/_nav.pug
+++ b/views/includes/_nav.pug
@@ -12,7 +12,7 @@ aside#sidebar
 				a(href="/compare" class=(nav === 'compare' ? 'active' : '')) Player Comparison
 
 			li
-				a(href="/rolling" class=(nav === 'rolling' ? 'active' : '')) Rolling Hundred Fifty
+				a(href="/rolling" class=(nav === 'rolling' ? 'active' : '')) Rolling Twenty Five
 
 			li
 				a(href="/stats/league-table" class=(nav === 'league-table' ? 'active' : '')) League Table
