--- a/views/stats.pug
+++ b/views/stats.pug
@@ -57,9 +57,9 @@ block content
 						#slider.slider
 
 			.drop-down.game
-				.drop-down_label Filter by Min Played
+				.drop-down_label Filter by Games
 				.drop-down_current(role="button")
-					span.value 50
+					span.value 25
 					.drop-down_list(style="width:150%" class="pad")
 						p.desc Minimum amount of games played per player
 						#slider-game.slider
