--- a/views/player-dash.pug
+++ b/views/player-dash.pug
@@ -10,10 +10,22 @@ block content
 
 		.tabs
 			.left
-				a.active Summary
-				a Allies
-				a Opponents
-				a Maps
+				a(
+					href= './' + user
+					class=(navtab == 'summary' ? 'active' : '')
+				) Summary
+				a(
+					href= './' + user + '/allies'
+					class=(navtab === 'allies' ? 'active' : '')
+				) Allies
+				a(
+					href= './' + user + '/opponents'
+					class=(navtab === 'opponents' ? 'active' : '')
+				) Opponents
+				a(
+					href= './' + user + '/maps'
+					class=(navtab === 'maps' ? 'active' : '')
+				) Maps
 
 		section.stats-card-wrapper
 
@@ -79,3 +91,7 @@ block content
 									td.text-r 💩💩💩💩
 								else
 									td.text-r 💩💩💩💩💩
+
+		section.test
+			p recent 20 games
+			p tags, pops, grabs, drops, hold, caps, prevent, returns, pups
